# pelican-wavedrom

./: README.md  pyproject.toml
pelican/plugins/wavedrom_generator/: __init__.py  preprocessor.py
